Regression: Crash when using Rotation Output of Curve To Points node (node_geo_curve_to_points.cc) #103747

Closed
opened 2023-01-09 02:58:33 +01:00 by AgentA1cr · 10 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: Quadro K3100M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 426.78

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-08 16:21, hash: 891b973029
Worked: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-04 01:28, hash: 80639a93a8
Caused by 2ffd08e952

Short description of error
When connecting the Rotation output of an active Curve To Points node (or opening a file with such a connection), Blender crashes.

Exact steps for others to reproduce the error

  • Create a new project
  • add a Geonodes modifier to the default cube
  • Insert a Curve Primitive node, connect it to a Curve To Points node
  • Connect that to the geometry output

Then connect the Rotation output of the node to any active node that will evaluate it (Set Position, Group Output, etc.)

First 4 steps included:
#103747.blend

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: Quadro K3100M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 426.78 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-08 16:21, hash: `891b973029` Worked: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-04 01:28, hash: `80639a93a8` Caused by 2ffd08e952 **Short description of error** When connecting the Rotation output of an active Curve To Points node (or opening a file with such a connection), Blender crashes. **Exact steps for others to reproduce the error** - Create a new project - add a Geonodes modifier to the default cube - Insert a Curve Primitive node, connect it to a Curve To Points node - Connect that to the geometry output # Then connect the Rotation output of the node to any active node that will evaluate it (Set Position, Group Output, etc.) First 4 steps included: [#103747.blend](https://archive.blender.org/developer/F14134814/T103747.blend)
Author

Added subscriber: @AgentA1cr

Added subscriber: @AgentA1cr

#103754 was marked as duplicate of this issue

#103754 was marked as duplicate of this issue
Pratik Borhade changed title from Crash when using Rotation Output of Curve To Points node (node_geo_curve_to_points.cc) to Regression: Crash when using Rotation Output of Curve To Points node (node_geo_curve_to_points.cc) 2023-01-09 08:13:10 +01:00
Member

Added subscribers: @JacquesLucke, @PratikPB2123

Added subscribers: @JacquesLucke, @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Crash caused by 2ffd08e952
@JacquesLucke ^

Crash caused by 2ffd08e952 @JacquesLucke ^

Added subscriber: @mod_moder

Added subscriber: @mod_moder

It seems that in order for the rotation attribute to exist, the existence of the tangent attribute and the normal must be provoked.

It seems that in order for the rotation attribute to exist, the existence of the tangent attribute and the normal must be provoked.

Added subscriber: @Wahooney

Added subscriber: @Wahooney

This issue was referenced by 29a41ed6c2

This issue was referenced by 29a41ed6c2f86248516c3d983f807000685305ef
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2023-01-09 14:32:29 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103747
No description provided.