Fix T103747: crash when using rotation output of Curve to Points node